--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,11 @@
 {
-
-
-                "routes":[
-                                {
-                                                "handle":"filesystem"
-                                },
-                    {
-                        "src":"/(.*)",
-                        "dest":"index.js"
-                    }
+                "routes": [
+                  {
+                    "handle": "filesystem"
+                  },
+                  {
+                    "src": "/.*",
+                    "dest": "/index.html"
+                  }
                 ]
-}
-
+              }
