--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@tailwindcss/vite": "^4.0.15",
+    "chart.js": "^4.4.9",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0"
