--- a/.env
+++ b/.env
@@ -1,14 +1,9 @@
-JWT_SECRET=mECQyti5RZZ9YzIBuoOeneb1DEr/MAs65Qa7NxYyH0U=
 
 
-# SMTP Configuration
-SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_USERNAME=agyapongrendosland53@example.com
-SMTP_PASSWORD=Migraine69
-SMTP_FROM=no-reply@example.com
-SMTP_TLS=false
 
-
-PORT=8080
+# Backend configuration
+BACKEND_PORT=8080
 RUST_LOG=info
+
+# Frontend configuration
+REACT_APP_API_BASE_URL=/
