--- a/ngnix.conf
+++ b/ngnix.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    server_name localhost;
 
     location / {
         root /usr/share/nginx/html;
@@ -7,20 +8,8 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location / {
-        proxy_pass http://backend:8080/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-}
-
-    error_page 404 /404.html;
-    location = /404.html {
-        internal;
-    }
-
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
-        internal;
+        root /usr/share/nginx/html;
     }
 }
